@@ -4,8 +4,11 @@ karl package Changelog
 Unreleased
 ----------
 
+- Fixed bug which caused content feeds to break if an edited item was not
+  contained by a community. (LP #670967)
+
 - Add a peopledirectory report filter based on the 'is_staff' index.
-  and configure it as an addable in a report.  (LP #669523).
+  and configure it as an addable in a report.  (LP #669523)
 
 - Make the jQuery UI dialog on Accept Invitation show an OK button
   that isn't misaligned.  We have some pretty horrible CSS styling
